<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >Muynak Tour</string>
    <string name="working_time" >Jumıs waqıtı</string>
    <string name="rating" >REYTING</string>
    <string name="monday" >Dúyshembi</string>
    <string name="tuesday" >Shiyshenbi</string>
    <string name="wednesday" >Shárshembi</string>
    <string name="thursday" >Byshenbe</string>
    <string name="friday" >Juma</string>
    <string name="saturday" >Shembi</string>
    <string name ="sunday" >Ekshembi</string>
    <string name="about" >Haqqında</string>
    <string name="open_map" >Kartanı ashıw</string>
    <string name="category" >Bólimler</string>
    <string name="best_places" >Eń jaqsı jaylar</string>
    <string name="more" >Taǵı</string>
    <string name="nearby_places" >Jaqın -átirap daǵı jaylar</string>
    <string name="home" >Úy</string>
    <string name="maps" >Karta</string>
    <string name="favourite" >Ardaqlı</string>
    <string name="settings" >Sazlamalar</string>
    <string name="hotel" >Mıymanxana</string>
    <string name="cafe" >Kafe hám Restoran</string>
    <string name="museum" >Turizm jayları</string>
    <string name="shops" >Dúkanlar</string>
    <string name="taxi" >Transport</string>
    <string name="street">Kóshe:</string>
    <string name="location">Jaylasıwdı alıp bo\'lmadi!!</string>
    <string name="not_connect">Internetge jalǵanbaǵansız</string>
    <string name="getting_loc">Jaylasıw alınıp atır…</string>
    <string name="language" >Til</string>
    <string name="share" >Jalǵawısh</string>
    <string name="privacy_policy" >Jasırınlıq siyasatı</string>
    <string name="support" >Járdem</string>
    <string name="dasturchi_bilan_aloqa" >Programmist menen baylanıs</string>
    <string name="xizmat_ko_rsatuvchi_bilan_aloqa" >Xızmet kórsetiwshi menen baylanıs</string>
    <string name="version" >Qosımsha versiyası : 1. 0. 0</string>
    <string name="back" >Artqa</string>
    <string name="fav" >Ardaqlı orınlardan óshirildi</string>
    <string name="fav_add" >Ardaqlı jaylarǵa qosıldi</string>
    <string name="zaprafka">Janılg\'i quyılıw shahapshası</string>
    <string name="emergency">Ayrıqsha xızmetler</string>
    <string name="bank">Bank hám bankomat</string>
    <string name="work_time">Jumıs waqıtı kiritilmegen!</string>
    <string name="qidirish">Qıdırıw…</string>
    <string name="bunaqa_nomli_joy_topilmadi">Bunaqa atlı jay tabilmadı</string>
    <string name="malumot_yoq">Maǵlıwmat joq</string>
    <string name="sevimli_joylar_topilmadi">Ardaqlı jaylar tabilmadı!</string>
</resources>