<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_200">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/home_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_50"
        app:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingTop="14dp"
            android:paddingEnd="25dp"
            android:paddingBottom="14dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:src="@drawable/location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/secondary_color" />

                <TextView
                    android:id="@+id/tvLoc"
                    android:fontFamily="@font/milliard_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                   android:textStyle="bold"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#3A3A3A"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chat_main_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_baseline_search_24"
                app:tint="@color/black_600" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_50"
        android:fontFamily="@font/milliard_medium"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/category"
        android:textColor="@color/night_900"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_50"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryTitle"
        tools:listitem="@layout/category_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white_50"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerview">

        <TextView
            android:id="@+id/home_item_recommended_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milliard_medium"
            android:text="@string/best_places"
            android:textColor="@color/night_900"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_recommended_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/more"
            android:textColor="@color/grey_600"
            android:textSize="15.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_item_recommended_star"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bestPlacesRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_50"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:listitem="@layout/best_places_item" />

    <TextView
        android:id="@+id/home_nearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_50"
        android:fontFamily="@font/milliard_medium"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/nearby_places"
        android:textColor="@color/night_900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bestPlacesRecView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nearbyPlacesRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_200"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/home_nearby"
        tools:listitem="@layout/nearby_places_item" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:background="#81717171"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:indeterminateDrawable="@drawable/progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>